syntax = "proto3";

option csharp_namespace = "AuthorizationService1";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc UserInfo (UserInfoRequest) returns (UserInfoReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginReply {
  bool verification = 1;
  string message = 2;
}
message UserInfoRequest {
   string UserName=1;
}
message UserInfoReply {
  string UserName=1;
  string EMail=2;
  string FirstName=3;
  string LastName=4;
  string PhoneNumber=5;
  string Title=6;
}